--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
